force-app/main/default/objects/OCE__Insight__c/OCE__Insight__c.object-meta.xml
<CustomObject>
    <description>Object stores insights data which is collected while calls, meetings, etc.</description>
    <label>Insight</label>
    <nameField>
        <label>Insight Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>