force-app/main/default/objects/OCE__Insight__c/fields/OCE1__InsightCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__InsightCreatedDate__c</fullName>
    <description>Indicates insight created date.</description>
    <formula>IF( ISBLANK(OCE__OfflineCreatedDate__c), CreatedDate, OCE__OfflineCreatedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates insight created date.</inlineHelpText>
    <label>Insight Created Date</label>
    <type>DateTime</type>
</CustomField>