force-app/main/default/objects/OCE__Insight__c/fields/OCE1__InsightTextLong__c.field-meta.xml
<CustomField>
    <fullName>OCE1__InsightTextLong__c</fullName>
    <description>Content of insight.</description>
    <inlineHelpText>Content of insight.</inlineHelpText>
    <label>Insight</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>