force-app/main/default/objects/OCE__Insight__c/fields/OCE1__IsParented__c.field-meta.xml
<CustomField>
    <fullName>OCE1__IsParented__c</fullName>
    <description>Determines if current insight has a parent or if it linked to another insight (MVP)</description>
    <formula>OR(NOT(ISBLANK(OCE1__ParentLinkedInsight__c)), NOT(ISBLANK(OCE__ParentInsight__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parented (MVP)</label>
    <type>Checkbox</type>
</CustomField>