force-app/main/default/objects/OCE__Insight__c/fields/OCE1__LinkedObjectives__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedObjectives__c</fullName>
    <description>Number of linked objectives</description>
    <label>Linked Objectives</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>