force-app/main/default/objects/OCE__Insight__c/fields/OCE1__LinkedParentInsightsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedParentInsightsNumber__c</fullName>
    <description>The number of linked parent insights (MVP)</description>
    <label>Linked Parent Insights Number (MVP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>