force-app/main/default/objects/OCE__Insight__c/fields/OCE1__ParentLinkedInsight__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ParentLinkedInsight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insight to which the current insight is linked (MVP)</description>
    <label>Parent Linked Insight (MVP)</label>
    <referenceTo>OCE__Insight__c</referenceTo>
    <relationshipLabel>Similar Insights</relationshipLabel>
    <relationshipName>LinkedInsights</relationshipName>
    <type>Lookup</type>
</CustomField>