force-app/main/default/objects/OCE__Insight__c/fields/OCE__Attendees__c.field-meta.xml
<CustomField>
    <fullName>OCE__Attendees__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>To store selected attendees as JSON.</description>
    <inlineHelpText>To store selected attendees as JSON.</inlineHelpText>
    <label>Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>