force-app/main/default/objects/OCE__Insight__c/fields/OCE__Call__c.field-meta.xml
<CustomField>
    <fullName>OCE__Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related call record.</description>
    <inlineHelpText>Related call record.</inlineHelpText>
    <label>Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>