force-app/main/default/objects/OCE__Insight__c/fields/OCE__CallDiscussion__c.field-meta.xml
<CustomField>
    <fullName>OCE__CallDiscussion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related call discussion record.</description>
    <inlineHelpText>Related call discussion record.</inlineHelpText>
    <label>Call Discussion</label>
    <referenceTo>OCE__CallDiscussion__c</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>