force-app/main/default/objects/OCE__Insight__c/fields/OCE__ContactCountryRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ContactCountryRef__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Denormalized contact country</description>
    <inlineHelpText>Denormalized contact country</inlineHelpText>
    <label>Contact Country Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>