force-app/main/default/objects/OCE__Insight__c/fields/OCE__ContactEmailRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ContactEmailRef__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Denormalized Contact Email</description>
    <inlineHelpText>Denormalized Contact Email</inlineHelpText>
    <label>Contact Email Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>