force-app/main/default/objects/OCE__Insight__c/fields/OCE__CreatedDateRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__CreatedDateRef__c</fullName>
    <description>Stores created date/time</description>
    <inlineHelpText>Stores created date/time</inlineHelpText>
    <label>Created Date Ref</label>
    <type>DateTime</type>
</CustomField>