force-app/main/default/objects/OCE__Insight__c/fields/OCE__DefaultRank__c.field-meta.xml
<CustomField>
    <fullName>OCE__DefaultRank__c</fullName>
    <description>Insight rank</description>
    <formula>IF(OCE__LinkedInsights__c == 0,OCE__UpvoteCount__c + 1 ,OCE__LinkedInsights__c +  OCE__UpvoteCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insight rank</inlineHelpText>
    <label>Default Rank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>