force-app/main/default/objects/OCE__Insight__c/fields/OCE__InsightAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__InsightAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related account record.</description>
    <inlineHelpText>Related account record.</inlineHelpText>
    <label>Insight Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Insights</relationshipLabel>
    <relationshipName>AccountInsights</relationshipName>
    <type>Lookup</type>
</CustomField>