force-app/main/default/objects/OCE__Insight__c/fields/OCE__InsightNameX__c.field-meta.xml
<CustomField>
    <fullName>OCE__InsightNameX__c</fullName>
    <description>Translated title of insight</description>
    <inlineHelpText>Translated title of insight</inlineHelpText>
    <label>Insight Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>