force-app/main/default/objects/OCE__Insight__c/fields/OCE__InsightText__c.field-meta.xml
<CustomField>
    <fullName>OCE__InsightText__c</fullName>
    <description>Content of insight.</description>
    <inlineHelpText>Content of insight.</inlineHelpText>
    <label>Insight</label>
    <type>TextArea</type>
</CustomField>