force-app/main/default/objects/OCE__Insight__c/fields/OCE__InsightTextX__c.field-meta.xml
<CustomField>
    <fullName>OCE__InsightTextX__c</fullName>
    <description>Translated content of insight</description>
    <inlineHelpText>Translated content of insight</inlineHelpText>
    <label>Insight Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>