force-app/main/default/objects/OCE__Insight__c/fields/OCE__IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether insight has to be synced to the OCEx related orgs.</description>
    <inlineHelpText>Defines whether insight has to be synced to the OCEx related orgs.</inlineHelpText>
    <label>Is Global</label>
    <type>Checkbox</type>
</CustomField>