force-app/main/default/objects/OCE__Insight__c/fields/OCE__LastUpvotedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastUpvotedDate__c</fullName>
    <description>Last date when this insight was upvoted</description>
    <inlineHelpText>Last date when this insight was upvoted</inlineHelpText>
    <label>Last Upvoted Date</label>
    <type>Date</type>
</CustomField>