force-app/main/default/objects/OCE__Insight__c/fields/OCE__LinkedInsights__c.field-meta.xml
<CustomField>
    <fullName>OCE__LinkedInsights__c</fullName>
    <description>Number of linked insights(children)</description>
    <inlineHelpText>Number of linked insights(children)</inlineHelpText>
    <label>Linked Insights</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>