force-app/main/default/objects/OCE__Insight__c/fields/OCE__Meeting__c.field-meta.xml
<CustomField>
    <fullName>OCE__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Meeting for the insight</description>
    <inlineHelpText>Source Meeting for the insight</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>