force-app/main/default/objects/OCE__Insight__c/fields/OCE__OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the User who created this record offline.</description>
    <inlineHelpText>ID of the User who created this record offline.</inlineHelpText>
    <label>Offline Created By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>