force-app/main/default/objects/OCE__Insight__c/fields/OCE__ParentInsight__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentInsight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent insight record.</description>
    <inlineHelpText>Parent insight record.</inlineHelpText>
    <label>Parent Insight</label>
    <referenceTo>OCE__Insight__c</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>