force-app/main/default/objects/OCE__Insight__c/fields/OCE__ProductsRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ProductsRef__c</fullName>
    <description>Denormalized products</description>
    <inlineHelpText>Denormalized products</inlineHelpText>
    <label>Products Ref</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>