force-app/main/default/objects/OCE__Insight__c/fields/OCE__Source__c.field-meta.xml
<CustomField>
    <fullName>OCE__Source__c</fullName>
    <description>Source where insight came from.</description>
    <inlineHelpText>Source where insight came from.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Insights Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>