force-app/main/default/objects/OCE__Insight__c/fields/OCE__TagNames__c.field-meta.xml
<CustomField>
    <fullName>OCE__TagNames__c</fullName>
    <description>Field stores tag (topic) names in human friendly format.</description>
    <inlineHelpText>Field stores tag (topic) names in human friendly format.</inlineHelpText>
    <label>Tag Names</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>