force-app/main/default/objects/OCE__Insight__c/fields/OCE__Tags__c.field-meta.xml
<CustomField>
    <fullName>OCE__Tags__c</fullName>
    <description>Field stores selected tags (topics) as JSON.</description>
    <inlineHelpText>Field stores selected tags (topics) as JSON.</inlineHelpText>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>