force-app/main/default/objects/OCE__Insight__c/fields/OCE__TagsRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__TagsRef__c</fullName>
    <description>Denormalized tags</description>
    <inlineHelpText>Denormalized tags</inlineHelpText>
    <label>Tags Ref</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>