force-app/main/default/objects/OCE__Insight__c/fields/OCE__UpvoteCount__c.field-meta.xml
<CustomField>
    <fullName>OCE__UpvoteCount__c</fullName>
    <description>Number of upvotes</description>
    <inlineHelpText>Number of upvotes</inlineHelpText>
    <label>Upvote Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>