force-app/main/default/objects/OCE__Insight__c/validationRules/OCE1__AddAccountsNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE1__AddAccountsNotAllowed</fullName>
    <active>false</active>
    <description>Prevent adding accounts to the parented insight.</description>
    <errorConditionFormula>OCE__ParentInsight__r.OCE1__IsParented__c 
&amp;&amp;
NOT( ISBLANK( OCE__InsightAccount__c ) )</errorConditionFormula>
    <errorMessage>This insight is parented. You cannot add accounts.</errorMessage>
</ValidationRule>