force-app/main/default/objects/OCE__Insight__c/validationRules/OCE1__ChangeLinkedParentNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE1__ChangeLinkedParentNotAllowed</fullName>
    <active>false</active>
    <description>Do not allow to change parent linked insight.</description>
    <errorConditionFormula>ISCHANGED( OCE1__ParentLinkedInsight__c )
&amp;&amp;
NOT( ISBLANK( OCE1__ParentLinkedInsight__c) )
&amp;&amp;
NOT( ISBLANK ( PRIORVALUE(OCE1__ParentLinkedInsight__c) ) )</errorConditionFormula>
    <errorMessage>This insight is parented. You cannot relink it.</errorMessage>
</ValidationRule>