force-app/main/default/objects/OCE__Insight__c/validationRules/OCE1__PreventEditingNameAndText.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE1__PreventEditingNameAndText</fullName>
    <active>false</active>
    <description>Prevent editing insight title and text.</description>
    <errorConditionFormula>( 
  ISCHANGED( Name ) 
  ||  
  ISCHANGED( OCE__InsightText__c ) 
  ||  
  ISCHANGED(  OCE1__InsightTextLong__c  )
)
&amp;&amp;  OCE1__IsParented__c</errorConditionFormula>
    <errorMessage>This insight is parented. You cannot modify it.</errorMessage>
</ValidationRule>