force-app/main/default/objects/OCE__Insight__c/validationRules/OCE1__RestrictLinkedInsightHierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE1__RestrictLinkedInsightHierarchy</fullName>
    <active>false</active>
    <description>Do not allow to break insight hierarchy.</description>
    <errorConditionFormula>NOT ( ISBLANK( OCE1__ParentLinkedInsight__c ) )
&amp;&amp;
OCE1__LinkedParentInsightsNumber__c &gt; 0</errorConditionFormula>
    <errorMessage>This insight is parented or has linked insights. You cannot modify it.</errorMessage>
</ValidationRule>