force-app/main/default/objects/OCE__Insight__c/validationRules/OCE__Prevent_editing_Name_and_InsightText.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Prevent_editing_Name_and_InsightText</fullName>
    <active>true</active>
    <description>Prevents editing Name and InsightText fields on Global Insights</description>
    <errorConditionFormula>AND($Permission.OCE__OCEx_SuperAdmin = FALSE, $Permission.OCE__OCEx_Admin = FALSE, OCE__IsGlobal__c = TRUE, OR(ISCHANGED(Name),ISCHANGED(OCE__InsightText__c)))</errorConditionFormula>
    <errorMessage>You cannot modify Insight and Insight Title fields on Global Insight</errorMessage>
</ValidationRule>